--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -75,11 +75,11 @@ body {
 		                    <table class="table table-bordered table-striped">
 		                      <tr>  
 		                        <td>
-		                          <font size="1" class="muted table-modaltwo">Company</font><%= purchased_sale.sale.brand %></td>
+		                          <font size="1" class="muted table-modaltwo">Company</font></td>
 		                      </tr>
 		                      <tr> 
 		                        <td>
-		                          <font size="1" class="muted table-modaltwo">Product</font><%= purchased_sale.sale.product %></td>
+		                          <font size="1" class="muted table-modaltwo">Product</font></td>
 		                      </tr>
 
 		                    </table>
