Changing Sold to On Loan

--- a/app/views/sales/_sale_li.html.erb
+++ b/app/views/sales/_sale_li.html.erb
@@ -9,7 +9,7 @@
     </a>
     <% if sale.sold_out %>    
     <span class="sold-tag sold">
-      <center>Sold</center>
+      <center>ON LOAN</center>
     </span>
     <% end %>
     <span class="thisInfo">
