--- a/app/views/sales/_sales.html.erb
+++ b/app/views/sales/_sales.html.erb
@@ -111,7 +111,7 @@ function fave(sale_id) {
     </a>
     <% if sale.sold_out %>    
     <span class="sold-tag sold">
-      <center>Sold</center>
+      <center>ON LOAN</center>
     </span>
     <% end %>
     <span class="thisInfo">
