--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -115,7 +115,7 @@
 	    <div class="button-wrap">
 	        <% if detail %>
 					      <% if sale.sold_out %>
-					        <a href="#" class="btn btn-success btn-large disabled">SOLD</a>          
+					        <a href="#" class="btn btn-success btn-large disabled">ON LOAN</a>          
 					      <% else %> 
 					        <% if sale.user or sale.user.is_merchant %>      
 					          <a href="<%= add_to_cart_url(:sale_id => sale.id) %>" class="btn btn-success btn-large ">Add To Cart</a>
