Removing Sign Up Wall

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -9,17 +9,21 @@ body {
 		<div class="marketing">
 	          <div class="well sidebar-nav">
 	            <ul class="nav nav-list">
-	              <li class="nav-header">Helpful Stuff</li>
-            <li><a href="/page/about">About</a></li>
-            <li><a href="/page/authenticity">Authenticity</a></li>
-             <li><a href="/page/help%20">Help</a></li>
-						<li><a href="/consignment">Consignment</a></li>
-            <li><a href="http://valydation.tumblr.com/" target="blank">Blog</a></li>
-              <li><a href="/page/jobs">Jobs</a></li>
-            <li class="active"><a href="/contact">Contact</a></li>
-            <li class="nav-header">Legal Stuff</li>
-            <li><a href="/page/privacy">Privacy Policy</a></li>
-            <li><a href="/page/tos">Terms of Service</a></li>
+	           		<li class="nav-header">Helpful Stuff</li>
+								            <li><a href="/page/about">About</a></li>
+								            <li><a href="/page/artcollection">Art Collection</a></li>
+								            <li><a href="/page/authenticity">Authenticity</a></li>
+								            <li><a href="/page/help%20">Help</a></li>
+								            <li><a href="/consignment">Consignment</a></li>
+								            <li><a href="http://valydation.tumblr.com/" target="blank" >Blog</a></li>
+								              <li><a href="/page/jobs">Jobs</a></li>
+								            <li class="active"><a href="/contact">Contact</a></li>
+								             <li><a href="/page/pr-valydation-launches">Press</a></li>
+								            <li class="nav-header">Legal Stuff</li>
+								            <li><a href="/page/privacy">Privacy Policy</a></li>
+								            <li><a href="/page/tos">Terms of Service</a></li>
+	              
+	            </ul>
 	              
 	            </ul>
 	          </div><!--/.well -->
