Adding Product Priority

--- a/app/views/admin/sales/edit.html.erb
+++ b/app/views/admin/sales/edit.html.erb
@@ -138,6 +138,13 @@
                               </div>
                             </div>
 
+														<div class="control-group">
+                              <label class="control-label" for="sale_product_priority">Priority</label>
+                              <div class="controls">
+                                <%= text_field(:sale, :product_priority, :class => "input-small") %>
+                              </div>
+                            </div>
+
 														
 
 														<div class="control-group">
