--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -599,6 +599,10 @@ function selectSize(size_id) {
 			                       <%= text_field_tag "condition", params[:condition], :class => "span2" %>
 			                       <br><br>
 			
+														<span class="add-on">Priority</span>
+			                       <%= text_field_tag "product_priority", params[:product_priority], :class => "span2" %>
+			                       <br><br>
+			
 															
 										            
 										         
