--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,31 @@
   </head>
 
   <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <!-- NAVBAR-->
+  <!--===============================================================-->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" data-scroll href="/"><%= image_tag 'valydation_logo.png', :height => 34, :width => 180 %></a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <% unless @no_header_links %>
+              <li><a href="http://valydation.tumblr.com/" target="blank" >Blog</a></li>
+              <li><%= link_to "About Us", "/page/about" %></li>
+              <li><%= link_to "Account", new_session_url %></li>
+              <% end %></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -60,23 +83,49 @@
               <li><a href="/page/about">About Us</a></li>
               <li><%= link_to "Blog", "http://www.valydation.tumblr.com", :target => "_blank" %></li>
             </ul>
-          </div><!--/.nav-collapse -->
+          </div>
 
         </div>
       </div>
-    </div>
+    </div> -->
 
     
     <%= yield %>
 
-    <div id="footer">
-		    <medium>
-	       <font color="#ffffff"> 
-		<p><%= link_to "ABOUT US", "/page/about" %> | <%= link_to "BLOG", "http://www.valydation.tumblr.com", :target => "_blank" %> | <a href="/page/siliconlegends">BECOME A SILICON LEGEND</a> | <a href="/page/help%20">HELP</a> | <a href="/page/jobs">JOBS</a> | <a href="/page/authenticity">AUTHENTICITY</a> | <a href="/contact">CONTACT US</a></p>
-		
-		<p>&copy;<%= link_to "Valydation 2013, All rights reserved.", "http://valydation.com" %><a href="/page/tos"> Terms of Service</a> and <a href="/page/privacy">Privacy Policy</a></p>
-	     </font> </medium>
-	    </div>
+    <!-- FOOTER-->
+    <!--===============================================================-->
+    <div class="bg-footer">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-sm-12">
+            <a href="http://www.facebook.com/valydation"><img src="/assets/facebook_icon_32.png"></a>
+            <a href="http://www.twitter.com/valydation"><img src="/assets/twitter_32_icon.png"></a>
+            <a href="http://www.instagram.com/valydation"><img src="/assets/instagram_32.png"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- FOOTER-BOTTOM-->
+    <!--===============================================================-->
+    <div class="bg-footer-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <p class="copyright">2013 &copy; /valydation - All Rights Reserved</p>
+          </div>
+          <div class="col-sm-6">
+            <ul class="list-inline pull-right">
+              <li class="border-right"><a href="/page/about">About Us</a></li>
+              <li class="border-right"><a href="/page/privacy">Privacy</a></li>
+              <li class="border-right"><a href="/page/tos">Terms of Service</a></li>
+             
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
 	 
 
 
