--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -22,7 +22,8 @@
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="/assets/MST_Favicon.png" type="image/png">
     <link rel="icon" href="/assets/MST_Favicon.png" type="image/png">
-
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <script type="text/javascript">
 
 	  var _gaq = _gaq || [];
@@ -40,50 +41,57 @@
   </head>
 
   <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <!-- NAVBAR-->
+  <!--===============================================================-->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
-					
-          <center>
-          <a class="brand" href="/">
-            <%= image_tag 'valydation_logo.png', :height => 34, :width => 180 %>
-          </a>
-
-        </center>
-		
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <% unless @no_header_links %>
-							<li><a href="http://valydation.tumblr.com/" target="blank" >Blog</a></li>
+          </button>
+          <a class="navbar-brand" data-scroll href="/"><%= image_tag 'valydation_logo.png', :height => 34, :width => 180 %></a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <% unless @no_header_links %>
+              <li><a href="http://valydation.tumblr.com/" target="blank" >Blog</a></li>
               <li><%= link_to "About Us", "/page/about" %></li>
               <li><%= link_to "Account", new_session_url %></li>
-              <% end %>
-            </ul>
-          </div><!--/.nav-collapse -->
+              <% end %></li>
+          </ul>
         </div>
       </div>
     </div>
+
+    
 	
     
     <%= yield %>
 
 	  
-		<div id="footer">
-		    <medium>
-	       <font color="#ffffff"> 
+		<!-- FOOTER-BOTTOM-->
+    <!--===============================================================-->
+    <div class="bg-footer-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <p class="copyright">2013 &copy; /valydation - All Rights Reserved</p>
+          </div>
+          <div class="col-sm-6">
+            <ul class="list-inline pull-right">
+              <li class="border-right"><a href="/page/about">About Us</a></li>
+              <li class="border-right"><a href="/page/privacy">Privacy</a></li>
+              <li class="border-right"><a href="/page/tos">Terms of Service</a></li>
+             
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
-	
-								
-								<p style="margin-top:19px;">&copy;<%= link_to "Valydation 2013, All rights reserved.", "http://valydation.com" %> <u><a href="/page/tos">Terms of Service</a></u> and <u><a href="/page/privacy">Privacy Policy</a></u>			
-		</p>
-	     </font> </medium>
-	    </div>
 
     <link href="/page/custom-css.css" media="screen" rel="stylesheet" type="text/css" />
 
