--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content=""> 
    <meta name="p:domain_verify" content="90269a038dd4c1af51dbb09519eaddfc"/>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <%= javascript_include_tag 'application' %>
 
     <%= stylesheet_link_tag 'application' %>
@@ -40,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" data-scroll href="/"><%= image_tag 'valydation_logo.png', :height => 34, :width => 180 %></a>
+          <a class="navbar-brand" data-scroll href="/"><img alt="Valydation_logo" src="/assets/valydation_logo.png"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -125,8 +126,6 @@
         </div>
       </div>
     </div>
-
-	 
 
 
     <link href="/page/custom-css.css" media="screen" rel="stylesheet" type="text/css" />
