--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -10,7 +10,7 @@
     <!--
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     -->
-	
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <%= javascript_include_tag 'application' %>    
     <%= stylesheet_link_tag 'application' %>
 
@@ -103,7 +103,7 @@
         </div>
       </div>
     </div>
-
+   
 
     <link href="/page/custom-css.css" media="screen" rel="stylesheet" type="text/css" />
 
