--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,10 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <% unless @no_header_links %>
+              <li><form class="form-search" action="/search_results">
+              <input type="text" name="q" value="<%= params[:q] %>" data-provide="typeahead" class="input-medium search-query" placeholder="Search by Company">
+            </form>
+          </li>
               <li><a href="http://valydation.tumblr.com/" target="blank" >Blog</a></li>
               <li><%= link_to "About Us", "/page/about" %></li>
               
@@ -54,42 +58,7 @@
         </div>
       </div>
     </div>
-    <!-- <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-
-          <div class="nav-collapse collapse">
-            <form class="form-search" action="/search_results">
-              <input type="text" name="q" value="<%= params[:q] %>" data-provide="typeahead" class="input-medium search-query" placeholder="Search by Company">
-            </form>
-          </div>
-
-
-          <center>
-            <a class="brand" href="/">
-              <%= image_tag 'valydation_logo.png', :height => 34, :width => 180 %>
-            </a>
-          </center>
-		
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-             
-							<li><a href="<%= view_cart_url %>" class="cart-icon"><%= image_tag 'cart-icon.png', :height => 40, :width => 32 %><% unless @cart.items.empty? %><div class="item-count notification-count"><%= @cart.items.size %></div><% end %></a></li>
-							<li><a href="<%= edit_user_url("self") %>">Account</a></li>
-              <li><a href="/page/about">About Us</a></li>
-              <li><%= link_to "Blog", "http://www.valydation.tumblr.com", :target => "_blank" %></li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-    </div> -->
-
+    
     
     <%= yield %>
 
