--- a/app/views/sales/_sales.html.erb
+++ b/app/views/sales/_sales.html.erb
@@ -119,7 +119,7 @@ $(function (){
     <span class="thisInfo">
     </span>
     <div class="hover-toggle">
-      <center><span class="percentoff"><%= humanized_money_with_symbol sale.orig_price %></span></center>
+      <span class="percentoff"></span>
     </div>
   </div>
 </div>
