--- a/app/views/sales/_sales.html.erb
+++ b/app/views/sales/_sales.html.erb
@@ -102,7 +102,7 @@ $(function (){
 
 <% row.each do |sale| %>
 
-<li class="span4">
+<li class="col-md-4">
 <div class="hover-group">
   <div class="image-wrapper">
     <span class="thisInfo">
