--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -26,9 +26,9 @@
 	    <div class="content-blog-bg-bot">
 	        <div class="product-detail-wrap top30 clearfix" id="mc_wrap">
 	                <!-- left container for images -->
-	                <div class="col-sm-6">
+	                <div class="col-md-6">
 	                    <!-- large image container -->
-						<img id="sale_image_<%= sale.id %>" src="<%= sale.image_0.versions[:feed_large_2x] if sale.image_0 %>" alt="" />
+						<img class="feed-large" id="sale_image_<%= sale.id %>" src="<%= sale.image_0.versions[:feed_large_2x] if sale.image_0 %>" alt="" />
 	
 									<br>
 										<div class="more-views">
@@ -55,7 +55,7 @@
 	                <!--  end images block -->
 
 	                <!-- shopping container -->
-	                <div class="col-sm-6">
+	                <div class="col-md-6">
 
 	                    <!-- add to bag area -->
 	                                        <div class="product-name">
