--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,7 @@
         padding-top: 90px;
         padding-bottom: 40px;
         background-color: #f5f5f5;
+        margin-top:100px;
         
       }
 
