--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -59,6 +59,7 @@
             <% unless @no_header_links %>
               <li><a href="http://valydation.tumblr.com/" target="blank" >Blog</a></li>
               <li><%= link_to "About Us", "/page/about" %></li>
+              <li><a href="/sessions/new">Log In</a></li>
               
               <% end %></li>
           </ul>
